# advert-identifier-ocr

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  debug_refine.json  debug_refine.md  pyproject.toml  single_advert_breaks.csv
.obsidian/: workspace.json
dataviz/: advert-identifier-complex.html  advert-identifier-simple.darker.html  advert-identifier-simple.html  advert_identifier-complex.html  advert_identifier.html  manim_pipeline.py  manim_plan.md
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  MIGRATION_PLAN_OCR_ONLY.md  TROUBLESHOOTING.md  advert-identifier-complex.darker.html  advert-identifier-complex.highcontrast.html  advert-identifier-simple.highcontrast.html  coordinate-systems.md
experiments/: ocr_api_client.py  ocr_refinement.py
metadata/: 2024-03-26_ITV1HD.csv  ad_break_example.json
scripts/: README-advert-minimum-set-cover.md  README-fetch-filepaths.md  advert-minimum-set-cover.py  debug_refine_to_md.py  fetch_filepaths.py  fix_xml_escaping.py  hd_channels.txt  rename_advert_clips.py  start_screen_sessions.sh
tests/: test_clamp_verification.py  test_cli_and_pipeline.py  test_control_known_good.py  test_detect.py  test_ensemble_filter.py  test_estimation_drift.py  test_model_vote_stats.py  test_models.py  test_pipeline_state.py  test_refinement_integration.py  test_single_advert_clip.py  test_xml_escaping.py
video/: 2024-03-26_ITV1HD_09:00:00_01of02.xml  2024-03-26_ITV1HD_09:00:00_01of02_refined.xml  2024-03-26_ITV1HD_09:00:00_02of02.xml  2024-03-26_ITV1HD_09:00:00_break1_ocr.json  2024-03-26_ITV1HD_09:00:00_break2_ocr.json  2024-03-26_ITV1HD_09:00:00_metadata.json  2024-03-26_ITV1HD_09:00:00_pipeline_state.json  (+87 more)
(+152 files in other folders)
