[project]
name = "advert-identifier"
version = "0.1.0"
description = "AI-powered ad break sequence identification in TV broadcast videos"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
advert-identifier = "ad_break_identifier.cli:identifier_main"
advert-identifier-pipeline = "ad_break_identifier.cli:pipeline_main"
advert-identifier-metadata-extract = "ad_break_identifier.cli:extractor_main"
advert-identifier-clip = "ad_break_identifier.cli:clipper_main"
advert-identifier-benchmark = "ad_break_identifier.cli:benchmark_main"
advert-identifier-describe = "ad_break_identifier.cli:describer_main"
advert-identifier-single-advert-clip = "ad_break_identifier.cli:single_advert_clip_main"
advert-identifier-refine = "ad_break_identifier.cli:refine_main"
advert-identifier-ocr-scan = "ad_break_identifier.cli:ocr_scan_main"
advert-identifier-ocr-refine = "ad_break_identifier.cli:ocr_refine_main"
