[project]
name = "advert-identifier"
version = "0.2.0"
description = "OCR-based ad break sequence identification in TV broadcast videos"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.0.0",
]

[project.scripts]
advert-identifier = "ad_break_identifier.cli:identifier_main"
advert-identifier-pipeline = "ad_break_identifier.cli:pipeline_main"
advert-identifier-metadata-extract = "ad_break_identifier.cli:extractor_main"
advert-identifier-single-advert-clip = "ad_break_identifier.cli:single_advert_clip_main"
advert-identifier-reference = "ad_break_identifier.cli:reference_main"
